# brisc

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  docs.yml
brisc/: __init__.py  colorspacious.py  concatenate.py  cysparse.pyx  cyutils.pxd  cyutils.pyx  de.py  doublets.pyx  embed.pyx  harmonize.pyx  hdf5.pyx  hvg.pyx  kmeans.pyx  knn.pyx  labels.pyx  leiden.pyx  norm_factors.pyx  normalize.pyx  pca.pyx  pseudobulk.py  pseudobulk_and_markers.pyx  qc.pyx  single_cell.py  snn.pyx  sparse.py  type_aliases.py  utils.py  validated_dict.py
docs/: .gitignore  Makefile  README.md  deploy.sh  make_tutorial_data.py
docs/deploy/: _worker.js
docs/source/: conf.py  index.md  installation.md
docs/source/_static/css/: custom.css
docs/source/_static/js/: api-scrollspy.js  benchmark-data.js  benchmark.js  details-anchor.js  header-reveal.js  theme-fix.js
docs/source/_templates/: guide-nav.html
docs/source/api/: index.md
docs/source/de/: analysis.rst  index.rst  io.rst  properties.rst
docs/source/pseudobulk/: analysis.rst  data_access.rst  dictionary_interface.rst  index.rst  io.rst  manipulation.rst  properties.rst
docs/source/singlecell/: analysis.rst  data_access.rst  index.rst  io.rst  manipulation.rst  properties.rst  typedefs.rst
docs/source/tutorials/: basic_workflow.md  data_manipulation.md  differential_expression.md  index.md  integration_and_label_transfer.md  interoperability.md
tests/: conftest.py  make_test_data.py  test_cluster.py  test_de.py  test_embedding.py  test_hvg.py  test_integration.py  test_markers.py  test_neighbors.py  test_normalize.py  test_pca.py  test_pseudobulk.py  test_qc.py
